--- a/src/components/home/FeaturedProjects/FeaturedProjects.module.scss
+++ b/src/components/home/FeaturedProjects/FeaturedProjects.module.scss
@@ -51,6 +51,16 @@
   font-size: var(--fs-md);
 }
 
+.card h3::after {
+  content: '';
+  display: block;
+  width: 40px;
+  height: 2px;
+  margin-top: var(--space-2);
+  background: var(--color-accent);
+  border-radius: 999px;
+}
+
 /* Tablet */
 @media (min-width: 48rem) {
   .grid {
